# simple-mod-manager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  copy_exe.sh  mods_parsed.csv
simple-mod-manager/: bun.lockb  package.json
simple-mod-manager/src/: app.css
simple-mod-manager/src-tauri/: Cargo.toml  gf.js  tauri.conf.json
simple-mod-manager/src-tauri/src/: main.rs
simple-mod-manager/src/components/: Header.svelte  ModTypeChip.svelte
simple-mod-manager/src/components/ModListView/: ListItem.svelte  ModListView.svelte  types.ts
simple-mod-manager/src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/: main.rs
