[package]
name = "simple-mod-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1.39.2", features = ["full"] }
serde_json = "1.0.122"
csv = "1.3.0"
serde = { version = "1.0.205", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"