[package]
name = "simple-mod-manager"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
curseforge-rs = { path = "/home/sozo/Documents/GitHub/curseforge-rs/" }
tauri = { version = "1", features = ["dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1.39.2", features = ["full"] }
csv = "1.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
